# PF_PrograIII_SGIosset

./: .gitignore  fastf1_model.py  main.py  model.py  model_f1_gears.keras  pyproject.toml  trained_model.keras  trainer.py
