[project]
name = "pf-prograiii-sgiosset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.8.2",
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "tensorflow>=2.21.0",
]
